--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,8 @@ dependencies:
   - pillow>=8.3.0
   - pyyaml>=6.0
   - pytest>=7.0.0
-  - black>=22.0.0
+  - ruff>=0.4.0
+  - black>=24.0.0
   - pip:
     # NLP and Text Processing
     - nltk>=3.6
