--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "rag-demo"
 version = "0.1.0"
 description = "Evolution of RAG from vanilla to Graph-RAG implementations with educational examples"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 authors = [{name = "Karthik Ravi"}]
 requires-python = ">=3.11"
 keywords = ["rag", "retrieval-augmented-generation", "graph-rag", "nlp", "ai", "demo"]
@@ -15,7 +15,7 @@ classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Intended Audience :: Education",
-    "License :: OSI Approved :: MIT License",
+
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
@@ -78,6 +78,9 @@ select = [
 ignore = [
     "E501",  # line too long (handled by black)
     "B008",  # function calls in argument defaults
+    "B904",  # exception chaining (acceptable for demo project)
+    "E402",  # module level import not at top (acceptable in test files)
+    "N818",  # exception naming (acceptable for demo)
 ]
 
 [tool.ruff.lint.isort]
