--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-# OpenAI API Configuration
+# RAG Demo Environment Variables
+# Copy this file to .env and add your actual API keys
+
+# Required
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Optional: Hugging Face token for private models
